# swig_cmake_python_calls_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  example.h  example.i  makepypi.sh  setup.py
mac/: example.py
